2013-02-26  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (KojiClient.add_signature): Raise an exception instead
	of just silently logging a warning.

2012-07-17  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.100.
	* NEWS: Update.

	* config/bridge.conf: Document per-Koji instance required-fas-group-*
	variables.
	* src/bridge.py (BridgeConfiguration._add_sections): Recognize '[koji]'
	section.
	(BridgeConfiguration._read_configuration): Set up self.koji_fas_groups.
	(BridgeConnection.__forward_request_headers): Authorize user access to
	Koji instance.
	(BridgeConnection.__check_koji_instance_access): New method.

2012-07-16  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (BridgeConnection.__terminate_client_connection):
	Document why this is only necessary for the client-bridge connection.

2012-07-16  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (koji_read_config): Require 'topurl' instead of 'pkgurl'.
	* src/bridge.py (KojiClient.__init__): New member self.__koji_pathinfo.
	(KojiClient.__get_session): Initialize self.__koji_pathinfo from
	topurl in Koji configuration.
	(KojiClient.get_rpm_url): Use self.__koji_pathinfo.build instead of
	hard-coding the build directory layout, like Koji 1.7 does.

2012-07-10  Miloslav Trmač  <mitr@redhat.com>

	* src/client.py (SignRPMArgumentExaminer.open_rpm): Refuse to work on
	zero-length files (the bridge would try to replace them with something
	looked up in Koji).
	* tests/basic.at (Basic functionality): Test handling of empty files
	in sign-rpm and sign-rpms.

	* src/double_tls.py (_SplittingBuffer._active): Mark as inactive after
	we've seen EOFs on both streams, don't wait for a TLS close notify and
	FIN.

	* src/double_tls.py (_debug): Update sample to store output in per-PID
	files, and disable buffering.

	* src/double_tls.py (_CombiningBuffer._handle_errors): Don't send
	EOF markers if the destination has been already shut down for other
	reasons.
